<resources>
    <string name="app_name">WePay-Buyer</string>
    <string name="phone_input_hint">请输入手机号</string>
    <string name="app_icon">App图标</string>
    <string name="password_input_hint">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="go_to_register">没有账号，点我注册</string>
    <string name="captcha_input_hint">请输入验证码</string>
    <string name="send_captcha_text">获取验证码</string>
    <string name="register_text">注册</string>
    <string name="go_to_login">我有账号，立即登录</string>
    <string name="username">用户名</string>

    <string name="buyer_button">我的按钮</string>
    <string name="personal_info">个人中心</string>

    <string name="logout_text">退出帐号</string>
    <string name="edit_button">编辑</string>
    <string name="save_button">保存</string>
    <string name="delete_button">删除</string>

    <string name="recipient_input_hint">请输入收货人姓名</string>
    <string name="address_input_hint">请输入收货地址</string>
    <string name="buyer_address">我的收货地址</string>

    <string name="card_input_hint">请输入银行卡号</string>
    <string name="default_card">默认银行卡</string>
    <string name="buyer_card">我的银行卡</string>
    <string name="add_buyer_card">新增银行卡</string>

    <string name="wifi_account">wifi账号</string>
    <string name="wifi_password">wifi密码</string>
    <string name="wifi_account_input_hint">请输入wifi账号</string>
    <string name="wifi_password_input_hint">请输入wifi密码</string>
    <string name="button_connect_info">按钮连接信息</string>

    <string name="buyer_order">我的订单</string>
    <string name="have_delivered">已发货</string>
    <string name="have_ordered">已接单</string>
    <string name="confirm_receipt_button">确认收货</string>

    <string name="choose_good">选择商品</string>
    <string name="good_detail_title">商品详情</string>
    <string name="confirm">确定</string>
    <string name="a_key_number">一键购买数量：</string>
    <string name="add_button">添加按钮</string>

    <string name="connect_nfc">NFC感应区</string>

</resources>
