<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:background="@color/colorBodyBackground">

    <ImageView
        android:src="@drawable/shopping_cart"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_icon"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextField">
        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_input_hint"
            android:inputType="phone"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            style="@style/TextField"
            android:layout_width="0dp">
        <EditText
            android:id="@+id/register_captcha"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/captcha_input_hint"
            android:inputType="number"
            android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/send_captcha_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/send_captcha_text"
            android:textColor="@color/colorText"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextField">
        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        style="@style/ButtonStyle"/>

    <TextView
        android:id="@+id/go_to_login"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_login" />

</LinearLayout>
