<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >
        <TableRow>
            <ImageView
                android:id="@+id/return_buyer_card"
                android:src="@drawable/return_last"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="30dp" />

            <TextView
                android:text="@string/add_buyer_card"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp" />

        </TableRow>
    </TableLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        style="@style/TextField">
        <EditText
            android:id="@+id/add_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_input_hint"
            android:inputType="number"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/is_default_card"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/default_card" />

    <Button
        android:id="@+id/save_buyer_card"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:text="@string/save_button"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold" />
    <!--TODO:button置于页面最下方-->
</LinearLayout>