<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <ImageView
                android:id="@+id/return_button_connect_info"
                android:src="@drawable/return_last"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="30dp" />

            <TextView
                android:text="@string/button_connect_info"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        style="@style/TextField">
        <EditText
            android:id="@+id/edit_wifi_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wifi_account_input_hint"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        style="@style/TextField">
        <EditText
            android:id="@+id/edit_wifi_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wifi_password_input_hint"
            android:maxLines="5"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_button_connect_info"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:text="@string/save_button"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold" />
    <!--TODO:button置于页面最下方-->
</LinearLayout>