<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:padding="10dp"
            android:background="@color/colorPrimary" >
            <ImageView
                android:id="@+id/return_personal_info"
                android:src="@drawable/return_last_white"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="30dp" />

            <TextView
                android:text="@string/buyer_order"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </TableRow>
    </TableLayout>

    <RadioGroup
        android:id="@+id/order_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/have_delivered"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:textColor="@color/menu"
            android:text="@string/have_delivered"
            android:button="@null" />

        <RadioButton
            android:id="@+id/have_ordered"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:textColor="@color/menu"
            android:text="@string/have_ordered"
            android:button="@null" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/order_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>