<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <ImageView
                android:id="@+id/return_personal_info"
                android:src="@drawable/return_last"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="30dp" />

            <TextView
                android:text="@string/button_connect_info"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/wifi_account"
                    android:textColor="@color/menu"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/wifi_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textColor="@color/menu"
                    android:textSize="18sp"
                    android:text="ZJUWLAN" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textColor="@color/menu"
                    android:textSize="18sp"
                    android:text="@string/wifi_password" />

                <TextView
                    android:id="@+id/wifi_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textColor="@color/menu"
                    android:textSize="18sp" />
            </TableRow>


        </TableLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom" >
        <Button
            android:id="@+id/edit_connect_info"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:text="@string/edit_button"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>