<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorBodyBackground"
    >

    <TextView
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/logout_text"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" >
        <TableRow
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@drawable/avatar" />

            <TextView
                android:id="@+id/username"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="17816862787"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buyer_address"
            style="@style/TextField" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@drawable/buyer_address" />

            <TextView
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buyer_address"
                android:textColor="@color/menu"
                android:textSize="20sp" />



        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buyer_card"
            style="@style/TextField" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@drawable/buyer_card" />

            <TextView
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buyer_card"
                android:textColor="@color/menu"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buyer_order"
            style="@style/TextField" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@drawable/buyer_order" />

            <TextView
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buyer_order"
                android:textColor="@color/menu"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/connect_button_info"
            style="@style/TextField" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@drawable/button_info" />

            <TextView
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_connect_info"
                android:textColor="@color/menu"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

</LinearLayout>