<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:padding="10dp"
            android:background="@color/colorPrimary" >
            <ImageView
                android:id="@+id/return_last"
                android:src="@drawable/return_last_white"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="30dp" />

            <TextView
                android:text="@string/good_detail_title"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/good_detail_img"
                android:scaleType="fitCenter"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
            <View
                android:layout_height="1px"
                android:background="#000000"
                android:layout_width="fill_parent">
            </View>
            <TextView
                android:id="@+id/good_detail_name"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/good_detail_description"
                android:padding="10dp"
                android:textSize="15sp"
                android:textColor="@color/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/good_detail_price"
                android:padding="5dp"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/good_detail_store"
                android:padding="5dp"
                android:textSize="15sp"
                android:gravity="end"
                android:textColor="@color/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_height="1px"
                android:background="#000000"
                android:layout_width="fill_parent">
            </View>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:padding="10dp" >
                    <TextView
                        android:text="@string/a_key_number"
                        android:padding="5dp"
                        android:textSize="20sp"
                        android:textColor="@color/menu"
                        android:layout_weight="6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/subtraction_number"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="-"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/good_detail_number"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/menu"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/add_number"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="+"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                </TableRow>
            </TableLayout>
            <Button
                android:id="@+id/edit_or_add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorText"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>